# ha-parkeren-nijmegen

./: CLAUDE.md  README.md  hacs.json  pyproject.toml
custom_components/parkeren_nijmegen/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  exceptions.py  manifest.json  models.py  sensor.py  services.py  services.yaml  strings.json
tests/: conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_services.py
