[project]
name = "ha-parkeren-nijmegen"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-homeassistant-custom-component>=0.13",
    "aioresponses>=0.7",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["custom_components/parkeren_nijmegen"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
